Fixed non-contrasting text

--- a/styles/style.css
+++ b/styles/style.css
@@ -122,3 +122,6 @@ body {
     line-height: 1.5;
 }
 
+.whiteText {
+    color:#fff;
+}
